paperless/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
  namespace: documents
  labels:
    app: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-ngx
  template:
    metadata:
      labels:
        app: paperless-ngx
    spec:
      containers:
      - name: paperless-ngx
        image: ghcr.io/paperless-ngx/paperless-ngx:2.19.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          name: http
        
        volumeMounts:
        - name: datastore-volume
          mountPath: /data 
        - name: consume-volume
          mountPath: /consume

      volumes:
      - name: datastore-volume
        persistentVolumeClaim:
          claimName: paperless-datastore-pvc
      - name: consume-volume
        persistentVolumeClaim:
          claimName: paperless-consume-pvc
