paperless/paperless-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
  namespace: documents
  labels:
    app: paperless-ngx
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: paperless-ngx
  template:
    metadata:
      labels:
        app: paperless-ngx
        app.kubernetes.io/name: paperless
    spec:
      containers:
      - name: paperless-ngx
        image: ghcr.io/paperless-ngx/paperless-ngx:2.20.10
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          name: http
        
        volumeMounts:
        - name: media-volume
          mountPath: /media 
        - name: data-volume
          mountPath: /data 
        - name: consume-volume
          mountPath: /consume

      volumes:
      - name: media-volume
        persistentVolumeClaim:
          claimName: paperless-media-pvc
      - name: data-volume
        persistentVolumeClaim:
          claimName: paperless-data-pvc
      - name: consume-volume
        persistentVolumeClaim:
          claimName: paperless-consume-pvc
