paperless/bentopdf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bentopdf
  namespace: documents
  labels:
    app: bentopdf
spec:
  type: ClusterIP
  ports:
    - name: "3183"
      port: 3183
      targetPort: 8080
  selector:
    app: bentopdf
