paperless/memos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  namespace: documents
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
        app.kubernetes.io/name: memos
    spec:
      containers:
      - name: memos
        image: neosmemo/memos:0.26.1
        ports:
        - containerPort: 5230
          name: http
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /var/opt/memos
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: memos-data
---
apiVersion: v1
kind: Service
metadata:
  name: memos
  namespace: documents
spec:
  selector:
    app: memos
  type: ClusterIP
  ports:
    - port: 5230
      targetPort: http
      protocol: TCP
      name: http
