paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx-service
  namespace: documents
  labels:
    app: paperless-ngx
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: paperless-ngx
