paperless/bentopdf-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bentopdf-router
  namespace: documents
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bentopdf.attias.io`)
      kind: Rule
      services:
        - name: bentopdf
          port: 3183
  tls:
    certResolver: le
