paperless/memos-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: memos-router
  namespace: documents
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`memos.attias.io`)
      kind: Rule
      services:
        - name: memos
          port: 5230
  tls:
    certResolver: le
